<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SocialNexus</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_register">MainActivity</string>
    <string name="next">Next</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="confirmpassword">Confirm Password:</string>
    <string name="choices">Please check the social media you would like to connect to</string>
    <string name="title_activity_splash">MainActivity</string>
    <string name="loading">Loading</string>
    <string name="title_activity_addfacebook">MainActivity</string>
    <string name="addaccount">Add Account</string>
    <string name="title_activity_addtwitter">MainActivity</string>
    <string name="title_activity_addgplus">MainActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="wrong_password">Password Incorrect</string>
    <string name="staylogged">Stay Logged In</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">Login</string>
    <string name="socialnexus">SocialNexus</string>

</resources>
