<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >
        
    <EditText
        android:id="@+id/PasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPassword" />
    
	<EditText
        android:id="@+id/UsernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/PasswordText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="text"  >

        <requestFocus />
    </EditText>

	<Button
	    android:id="@+id/LoginButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/PasswordText"
	    android:layout_below="@+id/PasswordText"
	    android:layout_marginTop="25dp"
	    android:onClick="login"
	    android:text="@string/login" />

	<Button
	    android:id="@+id/RegisterButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/LoginButton"
	    android:layout_alignBottom="@+id/LoginButton"
	    android:layout_alignRight="@+id/UsernameText"
	    android:onClick="register"
	    android:text="@string/register" />

	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/PasswordText"
	    android:layout_alignLeft="@+id/PasswordText"
	    android:text="@string/password" />

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/UsernameText"
	    android:layout_alignLeft="@+id/UsernameText"
	    android:text="@string/username" />
	
</RelativeLayout>
